smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/maps/map-empty-members.smithy
// Missing required member of shape `com.foo#MyMap`: key
namespace com.foo

map MyMap {}
